# builder-testproject

./: flatpak-requirements.txt  im.bernard.original.json  meson.build  python3-flatpak-requirements.json
data/: im.bernard.original.appdata.xml.in  im.bernard.original.desktop.in  im.bernard.original.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  original.gresource.xml  original.in  window.py  window.ui
